--- a/styles/site.css
+++ b/styles/site.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #faf3dd;
+    background-color: #fbf7ed;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
@@ -24,28 +24,24 @@ body {
 
 .decorative img {
     max-width: 400px;
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.map img {
+    max-width: 400px;
+    width: 90%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
 }
 
 .food img {
-    max-width: 200px;
+    max-width: 400px;
+    width: 100%;
     height: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-}
-
-.restaurant {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: aliceblue;
-    margin-right: 30px;
-    font-size: 80%;
-
 }
 
 nav ul {
@@ -97,13 +93,59 @@ nav ul {
 }
 
 .darker-color {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     color: black;
-    background-color: #e9d9b0
+    background-color: #f5946b;
+    border-left: 9px solid #d0cfb4;
 }
 
 .bright-color {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     color: black;
-    background-color: #ffe6bc
+    background-color: #ffefd2;
+    border-left: 9px solid #d0cfb4;
+}
+
+.sweet-color {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    color: black;
+    background-color:#fefafa;
+    border-left: 9px solid #d0cfb4;
+}
+
+.cool-color {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-left: 9px solid #d0cfb4;
+    color: black;
+    background-color: #e8e6e7;
+}
+
+.maps {
+    display: flex;
+    flex-direction: row;
+    background-color: #f4e5d6;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .source {
